[package]
authors = ['Fragcolor <https://github.com/fragcolor-xyz>']
description = 'Protos Asset Store pallet.'
edition = '2021'
license = 'BUSL-1.1'
name = 'pallet-protos-rpc-runtime-api'
readme = 'README.md'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
sp-chainblocks = { path = '../../../../primitives/chainblocks', default-features = false }

# Substrate Dependencies
[dependencies.sp-api]
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2022-02'
version = '4.0.0-dev'
default-features = false

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2022-02'
version = '4.1.0-dev'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2022-02'
version = '4.0.0-dev'


[dependencies.pallet-protos]
default-features = false
path = '../..'
version = '0.0.1'

[features]
default = ["std"]
std = [
	"sp-api/std",
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-runtime/std",
]
