[package]
authors = ['Fragcolor <https://github.com/fragcolor-xyz>']
description = 'Protos Asset Store pallet.'
edition = '2021'
license = 'BUSL-1.1'
name = 'pallet-protos-rpc-runtime-api'
readme = 'README.md'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-std = { version = '5.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-runtime = { version = '7.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-fragnova = { version = '0.1.0', path = '../../../../primitives/fragnova', default-features = false }
sp-api = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }

pallet-protos = { version = '0.0.1', default-features = false, path = '../..' }

codec = { package = "parity-scale-codec", version = '3.0.0', default-features = false, features = ["derive"] }
scale-info = { version = '2.1.2', default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
	"sp-std/std",
	"sp-runtime/std",
	"sp-api/std",
	"codec/std",
	"scale-info/std",
]
