[package]
name = "dummy_contract"
version = "0.1.0"
authors = ["Fragcolor Pte. Ltd. <ask@fragcolor.com>"]
edition = "2021"

[dependencies]
ink = { version = "4.0.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

sp-fragnova = { version = '0.1.0', path = '../../../../primitives/fragnova', default-features = false, features = ["use-as-dep-in-ink-contract"] }

protos = { version = "0.1.30", default-features = false }

fragnova_extensions = { version = '0.1.0', path = '../../../../extensions', default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "sp-fragnova/std",
    "protos/std",
    "fragnova_extensions/std"
]
ink-as-dependency = []


[workspace]
